fix portfolio routes + debug images not showing up

--- a/portfolio-app/src/index.css
+++ b/portfolio-app/src/index.css
@@ -251,7 +251,7 @@ textarea {
 }
 
 .img-thumbnail {
-  width: auto;
+  width: 400px;
   height: 300px;
   margin-bottom: 50px;
   cursor: pointer;
